themes/SuiteP/css/listview.scss
/* ... */
.list tr.evenListRowS1 td.inline-email-td {
  padding-top: 0;
  padding-bottom: 0;
}

.listViewEmpty label.selected-actions-label {
  margin: 3px 3px 3px 5px;
}

#selectLink > li > label {
  margin-bottom: initial;
  top: -6px;
  margin-right: 8px;
}

#selectLinkTop > li > label {
  margin-bottom: initial;
  top: -6px;
  margin-right: 8px;
}

#selectLinkBottom > li > label {
  margin-bottom: initial;
  top: -6px;
  margin-right: 8px;
}

#selectLink > li > label.disabled {
  color: $list-view-action-button-disabled-bg;
}

#selectLinkTop > li > label.disabled {
  color: $list-view-action-button-disabled-bg;
}

#selectLinkBottom > li > label.disabled {
  color: $list-view-action-button-disabled-bg; /* ??? #C9D2DA; */
}

.bootstrap-checkbox-hidden {
  display: none;
}

#actionLinkTop li.sugar_action_button ul.subnav.ddopen > li:last-child a {
  border-bottom: none;
}

.action-link-top li.sugar_action_button ul.subnav.ddopen > li:last-child a {
  border-bottom: none;
}

#actionLinkBottom li.sugar_action_button ul.subnav.ddopen > li:last-child a {
  border-bottom: none;
}

.action-link-bottom li.sugar_action_button ul.subnav.ddopen > li:last-child a {
  border-bottom: none;
}

li.sugar_action_button.hover.opened {
  position: relative;
  height: 40px;
  top: 13px;
  margin-top: -13px;
}

ul.clickMenu.selectmenu.SugarActionMenu li.sugar_action_button label.glyphicon.bootstrap-checkbox {
  margin-left: 4px;
}

ul.clickMenu.selectmenu.SugarActionMenu.searchLink.listViewLinkButton {
  top: -1px;
}

ul.clickMenu.selectmenu.SugarActionMenu.searchLink.listViewLinkButton > li > a {
  margin: 0;
  padding: 5px 8px 7px 7px;
  top: -1px;
}

ul.clickMenu > li > span.searchAppliedAlert {
  background-color: #F08377;
  position: absolute;
  line-height: 20px;
  color: #fff;
  height: 20px;
  width: 20px;
  border-radius: 30px;
  left: 40px;
  top: -16px;
  background-image: none;
  text-align: center;
}

.modal-preload-hidden {
  min-height: 100px;
  background-image: url("../../../../themes/SuiteP/images/loading.gif");
  background-position: center;
  background-repeat: no-repeat;
}

/* search form (and popup search form) */

.modal-content .search_form .view input[type="text"] {
  background-color: $input-bg;
}

.modal-content .search_form .view textarea {
  background-color: $input-bg;
}

.search_form .view select {
  padding: initial;
}

.search_form .view select#saved_search_select {
  padding: initial;
}

.modal-content .search_form .view select {
  border: 2px solid $input-bg;
}

.modal-content .search_form .view select#saved_search_select {
  border: 2px solid $input-bg;
}

.search_form .view .col-xs-12 input[type="text"] {
  width: 80%;
}

.search_form .view .col-xs-12 textarea {
  width: 80%;
}

.search_form.non-popup input[type="text"] {
  border: none;
  height: 40px;
  min-height: 40px;
  padding: 5px;
  line-height: 20px;
}

.search_form.non-popup select {
  border: none;
  height: 40px;
  min-height: 40px;
  padding: 5px;
  line-height: 20px;
}

.search_form.non-popup textarea {
  border: none;
  height: 40px;
  padding: 5px;
  line-height: 20px;
  min-height: 80px;
}

.search_form.non-popup select[multiple] {
  min-height: 80px;
}

.search-clear {
  display: none;
  clear: both;
}

.modal-search .search-clear {
  display: block;
}

.modal-search .col-xs-12.col-sm-4.col-md-4.col-lg-4 {
  float: none;
}

.modal-search .col-xs-12.col-sm-12.col-md-12.col-lg-4 {
  float: left;
}

.modal-search .col-xs-12.col-sm-12.col-md-12.col-lg-8 {
  float: left;
  width: 70%;
}

@media (min-width: 992px) {
  .modal-search .modal-lg {
    width: 600px;
  }
}

@media (max-width: 594px) {
  .modal-search .col-xs-12.col-sm-12.col-md-12.col-lg-8 {
    width: 100%;
  }
  .modal-search .form-item {
    width: 100%;
  }
}

.modal-search .row {
  margin-bottom: 30px;
}

.modal-search .row .submitButtons {
  float: right;
}

.modal-search .col-xs-12 {
  width: 100%;
  float: left;
}

.modal-search .col-sm-6 {
  width: 100%;
  float: left;
}

.modal-search .col-md-4 {
  width: 100%;
  float: left;
}

.modal-search .col-lg-4 {
  width: 100%;
  float: left;
}

.modal-search .search_fields_basic .col-xs-12 {
  width: 30%;
}

.modal-search .col-advanced-search .col-xs-12 {
  width: 30%;
}

.modal-search .form-item {
  float: left;
  width: 70%;
}

.modal-search .form-item.radios > div {
  margin-bottom: 10px;
}

@media (max-width: 460px) {
  .modal-search .nav-tabs > li.active {
    display: none;
  }

  .searchTabHeader.active {
    display: block;
  }

}

.modal-search .submitButtonsAdvanced {
  float: right;
  padding-right: 30px;
}

.content .modal-search .nav-tabs {
  margin: 16px 0 28px 0;
}

.list .pagination-unique td table.paginationTable td.paginationActionButtons:first-child {
  padding-right: 60px;
}

.paginationActionButtons > ul {
  float: left;
  height: 30px;
}

.selectActionsDisabled {
  float: left;
  height: 30px;
}

.paginationActionButtons .selectActionsDisabled {
  margin: 0 3px 3px 0;
}

.searchTabHeader {
  display: none;
}

td.paginationActionButtons ul.selectmenu > li > a.clearSearchIcon {
  padding: 3px 4px 4px 7px;
}

.listViewEmpty .clearSearchIcon {
  margin: 3px 0px 0px 8px;
}

